Testing the buttons interface

--- a/templates/components/navbar.html.twig
+++ b/templates/components/navbar.html.twig
@@ -6,8 +6,7 @@
   <div class="nav-wrapper container">
     
     <!-- Logo -->
-    <a id="logo-container" href="{{ path('homepage') }}" class="smallZoom brand-logo hide-on-med-and-down">Loup-Garou</a>
-    <a id="logo-container" href="{{ path('homepage') }}" class="brand-logo show-on-small">Loup-Garou</a>
+    <a id="logo-container" href="{{ path('homepage') }}" class="brand-logo">Loup-Garou</a>
     
     <!-- Navbar's item -->
     <ul class="right hide-on-med-and-down">
