--- a/templates/homepage.html.twig
+++ b/templates/homepage.html.twig
@@ -13,7 +13,7 @@
     </div>
 
     <!-- Description   -->
-    <h5 class="container center white-text">
+    <p class="container center white-text flow-text">
         Le jeu prend lieu dans un village infesté de Loups-Garous.
         <br><br>
         Lorsque ceux-ci se décident à exterminer la population,
@@ -21,7 +21,7 @@
         en votant chaque matin la mise à mort de l’un de ses membres.
         <br><br>
         Cette communauté contient un certain nombre d’individus aux pouvoirs atypiques, disposant parfois d’un but qui leur est propre…
-    </h5>
+    </p>
 
     <br><br>
 
