--- a/templates/parties/lobby.html.twig
+++ b/templates/parties/lobby.html.twig
@@ -1,7 +1,9 @@
 {% extends 'base.html.twig' %}
 
+{% set userID = app.session.get('userID') %}
+
 {% block body %}
-    
+
     <br><br>
 
     <!-- Title -->
@@ -17,11 +19,48 @@
 
         <br>
 
-        <div class="center"> 
-            <a class="waves-effect waves-light btn-large zoom" style="background-color: rgb(123, 27, 36)" href="{{ path("party_new") }}">
-                <i class="material-icons left">fiber_new</i>
-                Créer Nouvelle Partie
-            </a>
+        <div method="post" class="card" style="z-index:1;background-color: rgba(255, 255, 255, 0.75);">
+            <form method="post" class="container">
+
+                <!-- Hidden CSRF token -->
+                <input hidden type="text" name="token" value="{{ csrf_token('party_create') }}">
+
+                <br>
+
+                <!-- Name -->
+                <div class="input-field">
+                    <i class="material-icons prefix">games</i>
+                    <input id="name" name="name" type="text" class="validate" data-length="25" required>
+                    <label for="name">Nom de la Partie</label>
+                </div>
+
+                <br><br>
+
+                <!-- Submit -->
+                <div style="text-align: center;">
+                    {% if userID is defined and userID != 0 %}
+                        {# user logged-in : he can access the Parties #}
+                        <button class="btn-large smallZoom" type="submit">
+                            Créer Partie !
+                            <i class="material-icons left">fiber_new</i>
+                        </button>
+                    {% else %}
+                        {# user NOT logged-in : he CANNOT access the Parties #}
+                        <a class="btn-large smallZoom modal-trigger" href="#modal" style="background-color: rgb(123, 27, 36)">
+                            <i class="material-icons left">fiber_new</i>
+                            Créer Partie !
+                        </a>
+                    {% endif %}
+                </div>
+
+                <br>
+
+                {% if errorMessage is defined and errorMessage|length != 0 %}
+                    <br>
+                    <h4 class="lg-red center"> {{ errorMessage }} </h4>
+                    <br>
+                {% endif %}
+            </form>
         </div>
     </div>
 
@@ -38,13 +77,13 @@
 
     <!-- Party : Existing ones -->
     <div class="container">
-        <h4 class="center white-text">...ou rejoignez-en une !</h3>
-        
+        <h4 class="center white-text">...ou rejoignez-en une !</h4>
+
         <br>
 
         {% if parties|length > 0 %}
             <table class="highlight centered responsive-table white-text">
-                
+
                 <thead>
                     <tr>
                         <th>Nom de la Partie</th>
@@ -61,7 +100,23 @@
                             <td>{{ party.admin.username }}</td>
                             <td>{{ party.players|length }} / {{ party.players|length }}</td>
                             <td>
-                                <a class="waves-effect btn" href="{{ path('party_show', {'id' : party.id }) }}" style="background-color: rgb(123, 27, 36)">
+                                <a
+                                    style="background-color: rgb(123, 27, 36)"
+
+                                    {% if userID is defined and userID != 0 %}
+
+                                        {# user logged-in : he can access the Parties #}
+                                        class="waves-effect btn"
+                                        href="{{ path('party_show', {'id' : party.id }) }}"
+
+                                    {% else %}
+
+                                        {# user NOT logged-in : he CANNOT access the Parties #}
+                                        class="waves-effect btn modal-trigger"
+                                        href="#modal"
+
+                                    {% endif %}
+                                    >
                                     <i class="material-icons right">arrow_forward</i>
                                     Jouer !
                                 </a>
@@ -77,7 +132,18 @@
         {% endif %}
     </div>
 
-      <br><br>
+    <br><br>
+
+    <!-- Modal Structure : is activated when a non-logged in user wants to access / create a game -->
+    <div id="modal" class="modal">
+        <div class="modal-content">
+            <h4>Vous n'êtes pas connecté !</h4>
+            <p>Vous devez vous connecter / créer un compte afin de pouvoir créer une partie !</p>
+        </div>
+        <div class="modal-footer">
+            <a href="{{ path("account_connection") }}" class="modal-close waves-effect waves-green btn-flat">Se Connecter</a>
+        </div>
+    </div>
 
 {% endblock %}
 
@@ -85,6 +151,14 @@
 
 {% block javascripts %}
     <script>
+        $(document).ready(function(){
+            $('#modal').modal({dismissible: false});
+            //$('#modal').modal('open'); 
+
+            $('input#name').characterCounter();
+        });
+
+
         function goTo(id)
         {
             const route = "{{ path('party_show', { 'id' : 1 }) }}";
